refactor: use Java 17 syntax and fix NPE in AutoConfigurationImportFilter
- Use pattern matching for instanceof in MultiRedisRegistrar
- Use Set.of() instead of new HashSet<>(Arrays.asList())
- Fix NPE when autoConfigurationClasses contains null elements